# rootana_kobra

./: #canlist.txt#  .gitignore  CMakeLists.txt  KO-24-30_Analysis_Presentation.md  KO-24-30_Analysis_Presentation_v2.md  KO-24-30_Analysis_Presentation_v2.pptx  KoBRA_Dict.cxx  KoBRA_DictOnly.cxx  LinkDef.h  LinkDefOnly.h  Makefile  PAR_F1DPPAC.txt  PAR_F2DPPAC.txt  PAR_F2Plastic.txt  PAR_F2UPPAC.txt  PAR_F3PPTU.txt  README.md  README.txt  TAnaManager.cxx  TAnaManager.hxx  TCanvasManager.cxx  TCanvasManager.hxx  TDPlasticAna.cxx  TDPlasticAna.hxx  TDetectorAna.hxx  TDetectorManager.cxx  TDetectorManager.hxx  THistManager.cxx  THistManager.hxx  TKoBRAADCData.hxx  TKoBRAADCHistogram.cxx  TKoBRAADCHistogram.h  TKoBRADIGData.cxx  TKoBRADIGData.hxx  TKoBRADIGHistogram.cxx  TKoBRASniffer.cxx  TKoBRASniffer.hxx  TKoBRATDCData.cxx  TKoBRATDCHistogram.cxx  TKoBRATDCHistogram.h  (+55 more)
cut/: al29.txt  al30.txt  al31.txt  al32.txt  c13.txt  c14.txt  c15.txt  c16.txt  c17.txt  f18.txt  f19.txt  f20.txt  f20_b.txt  f21.txt  f21_b.txt  f22.txt  f22_b.txt  f23.txt  f23_b.txt  f24.txt  f24_b.txt  mg26.txt  mg27.txt  mg28.txt  mg29.txt  mg30.txt  n15.txt  n16.txt  n16_b.txt  n17.txt  n17_b.txt  n18.txt  n18_b.txt  n19.txt  n19_b.txt  n20.txt  na23.txt  na24.txt  na25.txt  na26.txt  (+22 more)
cut_old/: al29.txt  al30.txt  al31.txt  c14.txt  c16.txt  c17.txt  f20.txt  f21.txt  f23.txt  f24.txt  mg26.txt  mg27.txt  mg28.txt  mg30.txt  n16.txt  n18.txt  n19.txt  n20.txt  na24.txt  na26.txt  na27.txt  ne21.txt  ne22.txt  ne24.txt  ne25.txt  ne26.txt  o17.txt  o18.txt  o20.txt  o22.txt
cut_pla/: b13.txt  f21.txt  f22.txt  f23.txt  mg27.txt  mg28.txt  n16.txt  n17.txt  n18.txt  n19.txt  na25.txt  na26.txt  na27.txt  ne23.txt  ne24.txt  ne25.txt  o19.txt  o20.txt  o21.txt
cut_pla/bkp/: c14.txt  c16.txt  f21.txt  f22.txt  f23.txt  f24.txt  n18.txt  na26.txt  ne21.txt  ne23.txt  o18.txt  o19.txt  o20.txt
cut_pla/old/: f21_old.txt  o20_old.txt  o21_old.txt
cut_pla/old2/: b12.txt  c15.txt  c16.txt  f21.txt  f23.txt  mg26.txt  n17.txt  na24.txt  ne23.txt  ne25.txt  o19.txt  o20.txt  o21.txt
cut_pla_old/: f22.txt  f23.txt  n18.txt  n19.txt  na26.txt  ne23.txt  ne24.txt  o20.txt  o21.txt
cut_pla_old/bkp/: c13.txt  c15.txt  c17.txt  f19.txt  mg28.txt  n15.txt  n16.txt  n17.txt  n19.txt  n20.txt  na25.txt  na27.txt  ne22.txt  ne24.txt  ne25.txt  o17.txt  o21.txt  o22.txt
cut_pla_old/old/: f22_old.txt  ne23_old.txt  ne24_old.txt
cut_pla_old/old2/: c14.txt  f20.txt  n18.txt  na25.txt  ne22.txt  o18.txt
docs/: KO-24-30_Beam_Intensity_Methodology.md
html/: generic_rootana_setup.json  generic_webdisplay.html  generic_webdisplay_embed.html  generic_webdisplay_v2.html  plotting_functions_jsroot.js  plotting_functions_nonroot.js  rootana_functions.js  v792_page.html
html/jsroot/: README.txt
include/: TAnaManager.hxx  TDPlasticAna.hxx  TDetectorManager.hxx  THeader.hxx  TKoBRADIGHistogram.hxx  TKoBRASCAData.hxx  TKoBRASniffer.hxx  TKoBRATDCData.hxx  TLPPACAna.hxx  TLPPACData.hxx  TLPPACRawData.hxx  TLPPACXAna.hxx  TPIDHistogram.hxx  TPPACAna.hxx  TPPACData.hxx  TPPACHistogram.hxx  TPPACRawData.hxx  TPlasticAna.hxx  TPlasticData.hxx  TScalerAna.hxx  TScalerData.hxx  TTreeManager.hxx
macros/: add.C  analyze_ppac_tsum.py  aoq_cor.C  aoq_ext.C  brho_cor_mdis.C  brho_cor_pid.C  count_mdis.C  count_pid.C  curry.cxx  curry.hxx  kobra.cxx  kobra.hxx  kobra_beam.cxx  kobra_beam.hxx  kobra_f0.cxx  kobra_f0.hxx  kobra_scaler.cxx  kobra_scaler.hxx  macro.C  momdis.C  momdis_o20.C  new_tof.C  pid.C  pid_fluc.C  pid_mdis.C  pid_ne.C  pid_o.C  pid_o20.C  pid_reso.C  plot_ppac_eff.C  ppac_eff1.C  ppac_eff2.C  ppac_eff_analysis.C  ppac_eff_check.C  ppac_eff_check.txt  ppac_timing.C  ppac_tsum_analysis.txt  ppac_tsum_fit.txt  reso_test.C  runlog.txt  (+7 more)
pars/: PAR_F1DPPAC.txt  PAR_F1PPT.txt  PAR_F1UPPAC.txt  PAR_F1UPPACX.txt  PAR_F2DPPAC.txt  PAR_F2DPlastic.txt  PAR_F2PPTD.txt  PAR_F2PPTU.txt  PAR_F2SSD.txt  PAR_F2SSD.txt.old  PAR_F2SSDT.txt  PAR_F2UPPAC.txt  PAR_F3DPPAC.txt  PAR_F3DPlastic.txt  PAR_F3PPTD.txt  PAR_F3PPTU.txt  PAR_F3Plastic.txt  PAR_F3SSD.txt  PAR_F3SSD.txt.old  PAR_F3SSDT.txt  PAR_F3UPPAC.txt  PAR_SCPPAC.txt  par.yaml  par_set.py
scaler/: scaler.csv  scaler_ext_25ne.csv
scripts/: __init__.py  analysis.xlsx  analyze_ppac_fitting.py  beam_data.py  beam_time.csv  combined_table.csv  control_data.py  errors_table.csv  extract_fc2.py  extract_time.py  lebt_ana.py  md_to_pptx.py  midcheck_summary.csv  parse_table_data.py  plot_lebt_beamdump.py  requirements.txt  root_to_pandas.py  runtime_data.py  scaler.py  values_table.csv
src/: TAnaManager.cxx  TCanvasManager.cxx  TDPlasticAna.cxx  TDetectorManager.cxx  THistManager.cxx  TKoBRAADCData.cxx  TKoBRAADCHistogram.cxx  TKoBRADIGHistogram.cxx  TKoBRASCAData.cxx  TKoBRASniffer.cxx  TKoBRATDCHistogram.cxx  TLPPACAna.cxx  TLPPACData.cxx  TLPPACRawData.cxx  TLPPACXAna.cxx  TPIDHistogram.cxx  TPPACAna.cxx  TPPACData.cxx  TPPACHistogram.cxx  TPPACRawData.cxx  TPlasticAna.cxx  TPlasticHistogram.cxx  TSSDData.cxx  TSSDHistogram.cxx  TScalerAna.cxx  TScalerData.cxx  TTrackHistogram.cxx  TTreeManager.cxx  midcheck.cxx
